<resources>
    <string name="app_name">H2R</string>
    <string name="title_activity_main">H2R</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_search">Search</string>
    <string name="action_update_queue">Update Queue</string>
    <string name="action_update_plan_to_read">Update Plan to Read</string>
    <string name="action_import_json">Import</string>
    <string name="action_export_json">Export</string>
    <string name="action_view_completed">Completed</string>
    <string name="action_view_blacklist">Blacklist</string>
    <string name="action_delete_all">Delete All</string>
    <string name="unknown">Unknown</string>

    <!-- String Fonts -->
    <string name="font_roboto_regular" translatable="false">sans-serif</string>
    <string name="font_roboto_medium" translatable="false">sans-serif</string>

    <!-- String URLs -->
    <string name="base_url">https://hentai2read.com</string>
    <string name="base_image_url">https://img1.hentaicdn.com/hentai/cover</string>
    <string name="latest_start_url">/latest/0</string>
    <string name="popular_start_url">/hentai-list/all/any/all/most-popular/0</string>

    <string-array name="bookmark_array">
        <item>None</item>
        <item>Favorite</item>
        <item>On-Hold</item>
        <item>Plan To Read</item>
        <item>Completed</item>
        <item>Blacklist</item>
        <item>Queue</item>
    </string-array>

    <string-array name="reader_bookmark_array">
        <item>Favorite</item>
        <item>Completed</item>
    </string-array>

    <string-array name="reader_options_array">
        <item>Reload</item>
        <item>Reset</item>
        <item>Open Image In Browser</item>
    </string-array>

    <string-array name="blacklist_tags_array">
        <item>Futa on Male</item>
        <item>Scat</item>
        <item>Yaoi</item>
        <item>Korean Comic</item>
        <item>Girls Only</item>
        <item>Vore</item>
    </string-array>

    <string-array name="check_tags_array">
        <item>Bestiality</item>
        <item>Futanari</item>
        <item>Lolicon</item>
    </string-array>

    <string name="title_activity_browser">BrowserActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
