<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_show_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update_queue"
        android:orderInCategory="100"
        android:title="@string/action_update_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_json"
        android:orderInCategory="100"
        android:title="@string/action_import_json"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_json"
        android:orderInCategory="100"
        android:title="@string/action_export_json"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_completed"
        android:orderInCategory="100"
        android:title="@string/action_view_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_blacklist"
        android:orderInCategory="100"
        android:title="@string/action_view_blacklist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
</menu>
